# dopencl

./: .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile_alpine  Dockerfile_alpine_testruninhost  Dockerfile_alpine_worker  Dockerfile_ubuntu  Dockerfile_ubuntu_devenv  Dockerfile_ubuntu_testruninhost  Dockerfile_ubuntu_worker  INSTALL_Linux.txt  README.md  README_Linux.txt  TODOXXX_PERFORMANCE_TUNING_PARAMS  TODOXXX_WIP_CL_decompress_overlap.patch  dopenclenv.fish  dopenclenv.sh  install_local.sh  quick_test.sh  run_tests.sh
daemon/: CMakeLists.txt
daemon/src/: CommandQueue.cpp  CommandQueue.h  Context.cpp  Context.h  Device.cpp  Device.h  Event.cpp  Event.h  Kernel.cpp  Kernel.h  Memory.cpp  Memory.h  Program.cpp  Program.h  Session.cpp  Session.h  dOpenCLd.cpp  dOpenCLd.h  main.cpp
daemon/src/command/: Command.h  SetCompleteCommand.cpp  SetCompleteCommand.h
dclasio/: CMakeLists.txt
dclasio/include/CL/: README.txt
dclasio/include/dcl/: BlockingQueue.h  BufferListener.h  ByteBuffer.h  CLEventCompletable.h  CLObjectRegistry.h  CommandQueue.h  Completable.h  DCLTypes.h  DataTransfer.h  Process.h  Session.h  SynchronizationListener.h
dclasio/include/dcl/util/: Logger.h  README.txt
dclasio/include/dclasio/message/: BuildProgram.h  CommandMessage.h  CreateBuffer.h  CreateCommandQueue.h  CreateContext.h  CreateEvent.h  CreateKernel.h  CreateKernelsInProgram.h  CreateProgramWithBinary.h  CreateProgramWithSource.h  DeleteCommandQueue.h  DeleteContext.h  DeleteEvent.h  DeleteKernel.h  DeleteMemory.h  DeleteProgram.h  EnqueueBarrier.h  EnqueueBroadcastBuffer.h  EnqueueCopyBuffer.h  EnqueueMapBuffer.h  EnqueueMarker.h  EnqueueNDRangeKernel.h  EnqueueReadBuffer.h  EnqueueReduceBuffer.h  EnqueueUnmapBuffer.h  EnqueueWaitForEvents.h  EnqueueWriteBuffer.h  ErrorResponse.h  EventProfilingInfosResponse.h  EventSynchronizationMessage.h  FinishRequest.h  FlushRequest.h  GetEventProfilingInfos.h  GetKernelInfo.h  GetProgramBuildLog.h  InfoResponse.h  Message.h  ReleaseRequest.h  Request.h  RequestBufferTransfer.h  (+2 more)
dclasio/src/dcl/: ByteBuffer.cpp  CLObjectRegistry.cpp
dclasio/src/dcl/util/: Logger.cpp
dclasio/src/dclasio/: CommunicationManager.cpp  CommunicationManagerImpl.cpp  CommunicationManagerImpl.h  ComputeNodeCommunicationManagerImpl.cpp  ComputeNodeImpl.cpp  ComputeNodeImpl.h  ContextListenerImpl.cpp  DeviceImpl.cpp  HostCommunicationManagerImpl.cpp  HostImpl.cpp  ProcessImpl.cpp  ProcessImpl.h  ProgramBuildListenerImpl.cpp
dclasio/src/dclasio/comm/: Barrier.h  CLEventProcessor.cpp  CLEventProcessor.h  CLRequestProcessor.cpp  CLResponseProcessor.cpp  DataCompressionWorkPool.cpp  DataCompressionWorkPool.h  DataDecompressionWorkPool.cpp  DataDecompressionWorkPool.h  DataDispatcher.cpp  DataDispatcher.h  DataStream.cpp  DataStream.h  DataTransferImpl.h  DataTransferProfiler.cpp  DataTransferProfiler.h  DataTransferSentinelChecker.h  DataTransferUtils.cpp  InputDataStream.cpp  InputDataStream.h  MessageDispatcher.cpp  MessageDispatcher.h  MessageQueue.cpp  MessageQueue.h  OutputDataStream.cpp  OutputDataStream.h  ResponseBuffer.cpp  ResponseBuffer.h
dclasio/src/dclasio/message/: ContextErrorMessage.h  CreateProgramWithSource.cpp  DeviceIDsResponse.h  DeviceInfosResponse.h  EnqueueMapBuffer.cpp  EnqueueReadBuffer.cpp  EnqueueUnmapBuffer.cpp  EnqueueWriteBuffer.cpp  EventSynchronizationMessage.cpp  GetDeviceIDs.h  GetDeviceInfo.h  Message.cpp  ProgramBuildMessage.h  RequestBufferTransfer.cpp  SetKernelArg.cpp
icdpp/: CMakeLists.txt
icdpp/src/: CommandQueue.cpp  ComputeNode.cpp  Context.cpp  Event.cpp  Kernel.cpp  Memory.cpp  Memory.h  Platform.cpp  Program.cpp  cl.cpp  cl_wwu_dcl.cpp
icdpp/src/dclicd/: Buffer.cpp  Buffer.h  Event.cpp  Event.h
icdpp/src/dclicd/command/: Command.cpp  MappingCommand.cpp  MappingCommand.h  ReadWriteCommand.cpp  ReadWriteCommand.h
icdpp/src/dclicd/detail/: KernelArgument.cpp  ProgramBuild.cpp  ProgramBuild.h
standalone_test/: CMakeLists.txt
standalone_test/src/: bitonic.cpp  downsize_tiff.cpp  mapreduce_addition.cpp  read_write_compressed.cpp  test_createbuffer_ptr.cpp  test_createbuffer_ptr_multi.cpp  test_createbuffer_ptr_race.cpp  test_explicit_copy_cl.cpp  test_implicit_copy_cl.cpp  text_search.cpp
standalone_tests/: bitonic.cpp  mapreduce_addition.cpp  test_createbuffer_ptr.cpp  test_createbuffer_ptr_multi.cpp  test_createbuffer_ptr_race.cpp  test_explicit_copy_cl.c  test_explicit_copy_cl.cpp  test_implicit_copy_cl.c  test_implicit_copy_cl.cpp  trigger_clcreatebuffer_race.cpp
test/: CMakeLists.txt
test/src/: Buffer.cpp  DataTransfer.cpp  Device.cpp  Logger.cpp  utility.cpp
